# cursor-pointer

./: .gitignore  README.md  package-lock.json  package.json
docs/: API.md  BRIDGE_E2E.md  SETUP.md
python-client/: README.md  pyproject.toml
python-client/cursor_pointer/: __init__.py  anchors.py  annotate.py  client.py  executor.py  intent.py  refine.py  session.py
python-client/cursor_pointer/verbs/: __init__.py  base.py  browser.py  click.py  done.py  keyboard.py  mouse.py  scroll.py  system.py
python-client/cursor_pointer_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-client/examples/: agent_loop.py  click_delivery_test.py  closed_loop_click.py  drift_recovery.py  ocr_click.py  permission_check.py  precision_test.py  watch_and_play.py
python-client/tests/: conftest.py  test_anchors.py  test_dispatch.py  test_drift.py  test_executor.py  test_integration_textedit.py  test_intent.py  test_new_verbs.py  test_outcome_adapter.py  test_planner.py  test_registry.py  test_run_agent_click.py  test_run_agent_type.py  test_verify_done.py
python-client/tests/verbs/: test_app.py  test_browser_verb.py  test_click_verb.py  test_clipboard.py  test_done.py  test_drag.py  test_keyboard.py  test_scroll.py  test_shell.py
python-client/tools/: run_agent.py  run_all.py  run_ax.py  run_consensus.py  run_ocr.py  run_omniparser.py  run_som.py  run_verify.py  run_visual.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  input.rs  lib.rs  main.rs  screen.rs
(+50 files in other folders)
